# RemyLang

./: BASE_SYNTAX.md  Cargo.toml  LICENSE  ROADMAP.md  TESTING.md  THINGS_TO_UPGRADE.md
.github/workflows/: coverage.yml
examples/: test_functions.remy  test_returns.remy
src/: lib.rs  main.rs
src/ast/: expr.rs  mod.rs  operator.rs  stmt.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/llvm_backend/: codegen.rs  context.rs  mod.rs  types.rs
src/parser/: error.rs  expr_parser.rs  mod.rs  parser.rs  stmt_parser.rs
src/semantic/: symbol_table.rs  type_checker.rs
src/vm/: builtin.rs  environment.rs  error.rs  interpreter.rs  mod.rs  value.rs
tests/: codegen_tests.rs  lexer_tests.rs  llvm_test.rs  parser_tests.rs
